# game-of-life

./: .clang-format  CMakeLists.txt  readme.md
core/: CMakeLists.txt  main.cpp
include/: game-of-life.hpp
src/: CMakeLists.txt  game-of-life.cpp
